# OpenGLCameraDemo

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/openglcamerademo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  FaceTrack.cpp  FaceTrack.h  native-lib.cpp
app/src/main/java/com/example/openglcamerademo/: CameraRender.java  CameraView.java  MainActivity.java
app/src/main/java/com/example/openglcamerademo/face/: Face.java  FaceTracker.java
app/src/main/java/com/example/openglcamerademo/filter/: AbstractFBOFilter.java  AbstractFilter.java  BigEyeFilter.java  CameraFilter.java  FilterChain.java  FilterContext.java  RecordFilter.java  ScreenFilter.java  SoulFilter.java  SplitFilter.java  StickFilter.java
app/src/main/java/com/example/openglcamerademo/record/: EGLEnv.java  MediaRecorder.java
app/src/main/java/com/example/openglcamerademo/ui/: CameraRender.java  CameraView.java  ImageUtils.java  RecordButton.java
app/src/main/res/drawable/: record_button_background.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/raw/: base_frag.frag  base_vert.vert  beauty_adjust.frag  beauty_blur.frag  beauty_grinding.frag  beauty_highpass.frag  beauty_highpass_blur.frag  bigeye_frag.frag  camera_frag.frag  camera_vert.vert  soul_frag.frag  split2_screen.frag  split3_screen.frag
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/openglcamerademo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
(+8 files in other folders)
